[tool.poetry]
name = "music-ner-eacl2023"
version = "0.1.0"
description = "Code and data to reproduce the experiments presented in the article A Human Subject Study of Named Entity Recognition (NER) in Conversational Music Recommendation Queries (EACL 2023)"
authors = ["Deezer Research <<research@deezer.com>"]
packages = [
    { include = "music-ner-eacl2023" }
]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.9"
numpy = "^1.24.1"
urllib3 = "^1.26.14"
tqdm = "^4.64.1"
pandas = "^1.5.3"
scikit-learn = "^1.2.1"
datasets = "^2.9.0"
requests = "^2.28.2"
tabulate = "^0.9.0"
tensorboard = "^2.11.2"
matplotlib = "^3.6.3"
torch = "^1.13.1"
transformers = "^4.26.0"


[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pyflakes = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.pytest.ini_options]
addopts = "--cov-report xml:coverage.xml --cov=. --junitxml=xunit.xml"
junit_family = "xunit2"
